src/.antlr/LuaGrammarParser.java
// Generated from d:/Programs/Programmed/fluxlang/antlr4/FLUXASSEMBLY/src/LuaGrammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LuaGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, IDENTIFIER=117, BOOL=118, NIL=119, 
		NUMBER=120, STRING=121, WS=122, COMMENT=123;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_assignStatement = 2, RULE_expression = 3, 
		RULE_primaryExpression = 4, RULE_callChain = 5, RULE_literal = 6, RULE_variable = 7, 
		RULE_safeAccess = 8, RULE_functionCall = 9, RULE_tableConstructor = 10, 
		RULE_metatable = 11, RULE_metamethods = 12, RULE_labelStatement = 13, 
		RULE_matchArm = 14, RULE_pattern = 15, RULE_fieldPattern = 16, RULE_metamethod = 17, 
		RULE_field = 18, RULE_binaryOperation = 19, RULE_unaryOperation = 20, 
		RULE_controlFlowStatement = 21, RULE_ifStatement = 22, RULE_whileStatement = 23, 
		RULE_repeatStatement = 24, RULE_forStatement = 25, RULE_breakStatement = 26, 
		RULE_gotoStatement = 27, RULE_coroutineStatement = 28, RULE_protectedCallStatement = 29, 
		RULE_namedArgs = 30, RULE_block = 31, RULE_localDeclaration = 32, RULE_functionDeclaration = 33, 
		RULE_returnStatement = 34, RULE_operatorGroup = 35, RULE_logicalOp = 36, 
		RULE_comparisonOp = 37, RULE_arithOp = 38, RULE_bitwiseOp = 39, RULE_assignOp = 40, 
		RULE_unaryOp = 41, RULE_concatOp = 42, RULE_varargOp = 43, RULE_compoundAssignOp = 44, 
		RULE_incrOp = 45, RULE_coalesceOp = 46, RULE_shiftAssignOp = 47, RULE_nonNullAssertOp = 48, 
		RULE_identifierList = 49, RULE_expressionList = 50, RULE_functionExpression = 51, 
		RULE_selectStatement = 52, RULE_lambdaExpression = 53, RULE_typeAnnotation = 54, 
		RULE_typeSpec = 55, RULE_experimentalExpression = 56, RULE_safeNavigation = 57, 
		RULE_pipeOperator = 58, RULE_decoratorSyntax = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "assignStatement", "expression", "primaryExpression", 
			"callChain", "literal", "variable", "safeAccess", "functionCall", "tableConstructor", 
			"metatable", "metamethods", "labelStatement", "matchArm", "pattern", 
			"fieldPattern", "metamethod", "field", "binaryOperation", "unaryOperation", 
			"controlFlowStatement", "ifStatement", "whileStatement", "repeatStatement", 
			"forStatement", "breakStatement", "gotoStatement", "coroutineStatement", 
			"protectedCallStatement", "namedArgs", "block", "localDeclaration", "functionDeclaration", 
			"returnStatement", "operatorGroup", "logicalOp", "comparisonOp", "arithOp", 
			"bitwiseOp", "assignOp", "unaryOp", "concatOp", "varargOp", "compoundAssignOp", 
			"incrOp", "coalesceOp", "shiftAssignOp", "nonNullAssertOp", "identifierList", 
			"expressionList", "functionExpression", "selectStatement", "lambdaExpression", 
			"typeAnnotation", "typeSpec", "experimentalExpression", "safeNavigation", 
			"pipeOperator", "decoratorSyntax"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'spawn'", "'match'", "'with'", "'end'", "'async'", "'await'", 
			"'!!'", "'('", "')'", "':'", "'.'", "'['", "']'", "'?.'", "'?['", "','", 
			"'{'", "'}'", "'__metatable'", "'='", "'::'", "'when'", "'=>'", "'|'", 
			"'__add'", "'__sub'", "'__mul'", "'__div'", "'__mod'", "'__pow'", "'__unm'", 
			"'__concat'", "'__len'", "'__eq'", "'__lt'", "'__le'", "'__tostring'", 
			"'__pairs'", "'__ipairs'", "'__call'", "'#'", "'if'", "'then'", "'elseif'", 
			"'else'", "'while'", "'do'", "'repeat'", "'until'", "'for'", "'in'", 
			"'break'", "'goto'", "'coroutine'", "'create'", "'resume'", "'yield'", 
			"'status'", "'running'", "'wrap'", "'isyieldable'", "'pcall'", "'xpcall'", 
			"'local'", "'function'", "'return'", "'and'", "'or'", "'=='", "'>='", 
			"'<='", "'~='", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", 
			"'^'", "'&'", "'~'", "'<<'", "'>>'", "'+='", "'-='", "'*='", "'/='", 
			"'//='", "'^='", "'&='", "'|='", "'not'", "'typeof'", "'..'", "'...'", 
			"'..='", "'??='", "'+_='", "'-_='", "'+_'", "'-_'", "'??'", "'<<='", 
			"'>>='", "'select'", "'number'", "'string'", "'boolean'", "'table'", 
			"'any'", "'[]'", "'table<'", "'|>'", "'@'", null, null, "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "IDENTIFIER", "BOOL", 
			"NIL", "NUMBER", "STRING", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LuaGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LuaGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LuaGrammarParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4578678679359455230L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 9015995347763207L) != 0)) {
				{
				{
				setState(120);
				statement();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public ControlFlowStatementContext controlFlowStatement() {
			return getRuleContext(ControlFlowStatementContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public LocalDeclarationContext localDeclaration() {
			return getRuleContext(LocalDeclarationContext.class,0);
		}
		public LabelStatementContext labelStatement() {
			return getRuleContext(LabelStatementContext.class,0);
		}
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				assignStatement();
				}
				break;
			case T__41:
			case T__45:
			case T__47:
			case T__49:
			case T__51:
			case T__52:
			case T__53:
			case T__61:
			case T__62:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				controlFlowStatement();
				}
				break;
			case T__64:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				functionDeclaration();
				}
				break;
			case T__65:
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				returnStatement();
				}
				break;
			case T__63:
				enterOuterAlt(_localctx, 5);
				{
				setState(132);
				localDeclaration();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 6);
				{
				setState(133);
				labelStatement();
				}
				break;
			case T__106:
				enterOuterAlt(_localctx, 7);
				{
				setState(134);
				selectStatement();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 8);
				{
				setState(135);
				match(T__0);
				setState(136);
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
